syntax = "proto3";

option csharp_namespace = "grpcServer";

package unaryWithHeaders;

service UnaryWithHeaders {
  rpc Add (UnaryWithHeadersRequest) returns (UnaryWithHeadersReply);
}

message UnaryWithHeadersRequest {
  int32 number1 = 1;
  int32 number2 = 2;
}

message UnaryWithHeadersReply {
  int32 result = 1;
}
